--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    implementation 'co.gofynd.library:gravity-view:1.0'
 }
